--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ p, h1, h2, h3, img {
     margin: 0;
 }
 
+
 a {
     text-decoration: none;
     color: unset;
@@ -28,10 +29,17 @@ header h1 {
 }
 
 .navigation {
+    display: flex;
     color: #92CCCD;
     list-style: none;
-    margin-right: 10%;
+    margin-right: 5%;
     font-size: 2vw;
+    width: 50%;
+}
+.navigation a{
+    margin-left: 10%;
+    padding-bottom: 0.2vw;
+    border-bottom: 5px solid #92CCCD;
 }
 
 section {
@@ -65,15 +73,21 @@ section p {
 .works-list {
     display: flex;
     flex-wrap: wrap;
+    padding: 0;
+    margin-left: 1%;
+
 }
 
 .works-list li {
     width: 30vw;
     height: 20vh;
-    border: 3px solid #92CCCD;
+    border: 5px solid #92CCCD;
     list-style: none;
     margin: 1%;
-    /* position: relative; */
+    position: relative;
+    background-image: url('./assets/images/projectImage2.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .works-list li div {
@@ -83,3 +97,19 @@ section p {
     position: absolute;
 }
 
+#main-project {
+    width: calc(60vw + 2% + 10px);
+    height: 20vh;
+}
+
+#contact-me ul {
+    display: flex;
+    
+}
+#contact-me ul li{
+    margin: 1% 30% 10% 10%;
+  border-bottom: 5px solid #92CCCD;
+    list-style:none;
+    font-size: 1.3vw;
+ padding-bottom: .2vw;
+}
